spade-tests/src/snapshots/spade_tests__typeinference__transmute_to_inv_wire_container_is_disallowed.snap
---
source: spade-tests/src/typeinference.rs
---
struct Container {
    m: inv bool,
    r: bool
}

entity test(a: bool) -> Container {
    unsafe { std::conv::transmute(a) }
}


error: Type inv size mismatch. Attempting to transmute 0 bits to 1 bit
  ┌─ testinput:7:14
  │
7 │     unsafe { std::conv::transmute(a) }
  │              ^^^^^^^^^^^^^^^^^^^^^^^
  │              │                    │
  │              │                    The source has 0 bits inverted bits
  │              The output type has 1 bit inverted bits
  │
  = note: transmute can only convert between types of identical size
